[workspace]

# Was necessary after switching to dev tree-sitter to fix this warning:
# > some crates are on edition 2021 which defaults to `resolver = "2"`, but
# > virtual workspaces default to `resolver = "1"`.
#
# Also necessary to enable the `testing` feature of harp only when testing
# (i.e. when building downstream packages like Ark with Harp's `testing`
# feature set in `dev-dependencies`).
resolver = "2"

members = [
    "crates/amalthea",
    "crates/ark",
    "crates/echo",
    "crates/harp",
    "crates/libr",
    "crates/oak_index",
    "crates/stdext",
]

[workspace.package]
rust-version = "1.94"
edition = "2021"
license = "MIT"
authors = ["Posit Software, PBC"]

[workspace.lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
actix-web = "4.4.0"
aether_factory = { git = "https://github.com/posit-dev/air", package = "air_r_factory", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
aether_lsp_utils = { git = "https://github.com/posit-dev/air", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
aether_parser = { git = "https://github.com/posit-dev/air", package = "air_r_parser", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
aether_syntax = { git = "https://github.com/posit-dev/air", package = "air_r_syntax", rev = "4cbd36d552e27d8930cff1602d56bfd9ce4c1ed1" }
amalthea = { path = "crates/amalthea" }
anyhow = "1.0.100"
ark = { path = "crates/ark" }
ark_test = { path = "crates/ark_test" }
assert_matches = "1.5.0"
async-trait = "0.1.66"
base64 = "0.21.0"
biome_line_index = { git = "https://github.com/lionel-/biome", rev = "41d799cfa4cedd25625fc3f6bd7898532873f051" }
biome_rowan = { git = "https://github.com/lionel-/biome", rev = "41d799cfa4cedd25625fc3f6bd7898532873f051" }
blake3 = "1.8.2"
bus = "2.3.0"
cc = "1.1.22"
cfg-if = "1.0.0"
chrono = "0.4.23"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crypto-common = "0.1.6"
ctor = "0.1.26"
dap = { branch = "main", git = "https://github.com/sztomi/dap-rs" }
dashmap = "5.4.0"
dirs = "4.0.0"
ego-tree = "0.6.2"
embed-resource = "2.5.0"
env_logger = "0.10.0"
futures = "0.3.30"
generic-array = "0.14.6"
harp = { path = "crates/harp" }
harp-macros = { path = "crates/harp/harp-macros" }
hex = "0.4.3"
hmac = "0.12.1"
home = "0.5.5"
http = "0.2.9"
insta = "1.39.0"
itertools = "0.10.5"
libc = "0.2.152"
libloading = "0.8.1"
libr = { path = "crates/libr" }
log = "0.4.18"
mime_guess = "2.0.4"
nix = { version = "0.26.2", features = ["signal"] }
notify = "6.0.0"
oak_index = { path = "crates/oak_index" }
once_cell = "1.17.1"
parking_lot = "0.12.3"
paste = "1.0.14"
quote = "1.0.42"
rand = "0.8.5"
regex = "1.10.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
rust-embed = "8.2.0"
rustc-hash = "2.1.1"
scraper = "0.15.0"
semver = "1.0.19"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
serde_repr = "0.1.17"
serde_with = "3.0.0"
sha2 = "0.10.6"
stdext = { path = "crates/stdext" }
streaming-iterator = "0.1.9"
strum = "0.26.2"
strum_macros = "0.26.2"
syn = { version = "2.0.111", features = ["full"] }
tempfile = "3.13.0"
tokio = { version = "1.26.0", features = ["full"] }
# For https://github.com/ebkalderon/tower-lsp/pull/428
tower-lsp = { branch = "bugfix/patches", git = "https://github.com/lionel-/tower-lsp" }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tree-sitter = "0.24.7"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "95aff097aa927a66bb357f715b58cde821be8867" }
url = "2.5.7"
uuid = { version = "1.3.0", features = ["v4"] }
walkdir = "2"
winsafe = { version = "0.0.19", features = ["kernel"] }
xdg = "2.5.2"
yaml-rust = "0.4.5"
zmq = "0.10.0"
