[workspace]

# Was necessary after switching to dev tree-sitter to fix this warning:
# > some crates are on edition 2021 which defaults to `resolver = "2"`, but
# > virtual workspaces default to `resolver = "1"`.
#
# Also necessary to enable the `testing` feature of harp only when testing
# (i.e. when building downstream packages like Ark with Harp's `testing`
# feature set in `dev-dependencies`).
resolver = "2"

members = [
    "crates/*"
]

[workspace.package]
rust-version = "1.95"
edition = "2021"
license = "MIT"
authors = ["Posit Software, PBC"]

[workspace.lints.clippy]
result_large_err = "allow"
too_many_arguments = "allow"

[workspace.dependencies]
actix-web = "4.13.0"
aether_factory = { git = "https://github.com/posit-dev/air", package = "air_r_factory", rev = "d2659d5b158374bf486b594625ca50abbd0ac879" }
aether_lsp_utils = { git = "https://github.com/posit-dev/air", rev = "d2659d5b158374bf486b594625ca50abbd0ac879" }
aether_parser = { git = "https://github.com/posit-dev/air", package = "air_r_parser", rev = "d2659d5b158374bf486b594625ca50abbd0ac879" }
aether_syntax = { git = "https://github.com/posit-dev/air", package = "air_r_syntax", rev = "d2659d5b158374bf486b594625ca50abbd0ac879" }
amalthea = { path = "crates/amalthea" }
anyhow = "1.0.102"
ark = { path = "crates/ark" }
ark_test = { path = "crates/ark_test" }
assert_matches = "1.5.0"
async-trait = "0.1.89"
base64 = "0.22.1"
biome_line_index = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_rowan = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
biome_text_size = { git = "https://github.com/lionel-/biome", rev = "a1296ea6ba363d8b8d8f02181b2a4ce9315c5ef9" }
blake3 = "1.8.5"
bus = "2.4.1"
cc = "1.2.61"
cfg-if = "1.0.4"
chrono = "0.4.44"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
ctor = "1.0.0"
dap = { branch = "main", git = "https://github.com/sztomi/dap-rs" }
dashmap = "6.1.0"
dirs = "6.0.0"
ego-tree = "0.11.0"
embed-resource = "3.0.9"
env_logger = "0.11.10"
etcetera = "0.11.0"
flate2 = "1.1.9"
futures = "0.3.32"
harp = { path = "crates/harp" }
harp-macros = { path = "crates/harp/harp-macros" }
hex = "0.4.3"
hmac = "0.13.0"
home = "0.5.12"
insta = "1.47.2"
itertools = "0.14.0"
libc = "0.2.186"
libloading = "0.9.0"
libr = { path = "crates/libr" }
log = "0.4.29"
mime_guess = "2.0.5"
nix = { version = "0.31", features = ["fs", "poll", "process", "signal"] }
notify = "8.2.0"
oak_core = { path = "crates/oak_core" }
oak_db = { path = "crates/oak_db" }
oak_fs = { path = "crates/oak_fs" }
oak_ide = { path = "crates/oak_ide" }
oak_index = { path = "crates/oak_index" }
oak_index_vec = { path = "crates/oak_index_vec" }
oak_package_metadata = { path = "crates/oak_package_metadata" }
oak_r_process = { path = "crates/oak_r_process" }
oak_sources = { path = "crates/oak_sources" }
once_cell = "1.21.4"
parking_lot = "0.12.5"
paste = "1.0.15"
quote = "1.0.45"
rand = "0.10"
regex = "1.12.3"
reqwest = { version = "0.13.3", default-features = false, features = ["json"] }
reqwest-middleware = "0.5.1"
reqwest-retry = "0.9.1"
rust-embed = "8.11.0"
rustc-hash = "2.1.2"
scraper = "0.26.0"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_repr = "0.1.20"
serde_with = "3.19.0"
sha2 = "0.11.0"
smallvec = "1.15.1"
stdext = { path = "crates/stdext" }
streaming-iterator = "0.1.9"
strum = "0.28.0"
strum_macros = "0.28.0"
syn = { version = "2.0.117", features = ["full"] }
tar = "0.4.45"
tempfile = "3.27.0"
tokio = { version = "1.52.1", features = ["full"] }
# For https://github.com/ebkalderon/tower-lsp/pull/428
tower-lsp = { branch = "bugfix/patches", git = "https://github.com/lionel-/tower-lsp" }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tree-sitter = "0.24.7"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "95aff097aa927a66bb357f715b58cde821be8867" }
ureq = "3.3.0"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v4"] }
walkdir = "2"
windows-sys ="0.61.2"
winsafe = { version = "0.0.27", features = ["kernel"] }
xdg = "3.0.0"
yaml-rust2 = "0.11"
# We need ZMQ 4.3.5 to fix polling issues on Windows arm64
zmq = { git = "https://github.com/erickt/rust-zmq", rev = "5d78967" }
