[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[dependencies]
amalthea = { path = "../amalthea" }
log = "0.4.14"
env_logger = "0.9.0"
serde_json = "1.0.59"
libc = "0.2"
extendr-api = "0.2"
libR-sys = "0.2.2"
tower-lsp = "0.16.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.133", features = ["derive"] }

[profile.dev]
rpath = true
