[package]
name = "ark"
version = "0.1.0"
edition = "2021"

[dependencies]
amalthea = { path = "../amalthea" }
async-trait = "0.1.53"
dashmap = "5.3.3"
env_logger = "0.9.0"
extendr-api = "0.3.1"
lazy_static = "1.4.0"
libR-sys = "0.3"
libc = "0.2"
log = "0.4.14"
nix = { version = "0.24.1", features = ["signal"] }
notify = "4.0.17"
parking_lot = "0.12.1"
ropey = "1.4.1"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = "0.16.0"
tree-sitter = "0.20.6"
tree-sitter-r = "0.19.5"
walkdir = "2"

[profile.dev]
rpath = true
