[package]
name = "aether_path"
version = "0.1.0"
description = "Tagged identity types for files (filesystem paths and non-`file:` URIs)."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
log.workspace = true
percent-encoding.workspace = true
stdext.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
