[package]
name = "amalthea"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1.66"
cfg-if = "1.0.0"
chrono = "0.4.23"
crypto-common = "0.1.6"
dirs = "4.0.0"
futures = "0.3.26"
generic-array = "0.14.6"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.17"
nix = "0.26.2"
rand = "0.8.5"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"]}
sha2 = "0.10.6"
stdext = { path = "../stdext" }
uuid = { version = "1.3.0", features = ["v4"] }
zmq = "0.10.0"
strum = "0.24"
strum_macros = "0.24"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
anyhow = "1.0.80"
serde_with = "3.0.0"
serde_repr = "0.1.17"
tracing = "0.1.40"
assert_matches = "1.5.0"

[dev-dependencies]
env_logger = "0.10.0"
