[package]
name = "amalthea"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
chrono.workspace = true
crossbeam.workspace = true
crypto-common.workspace = true
dirs.workspace = true
futures.workspace = true
generic-array.workspace = true
hex.workspace = true
hmac.workspace = true
log.workspace = true
nix.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_with.workspace = true
sha2.workspace = true
stdext.workspace = true
strum.workspace = true
strum_macros.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
zmq.workspace = true

[dev-dependencies]
env_logger.workspace = true
