[package]
name = "ark"
version = "0.1.39"
edition = "2021"
rust-version = "1.70.0"
description = """
The Amalthea R Kernel.
"""

[dependencies]
actix-web = "4.4.0"
amalthea = { path = "../amalthea" }
anyhow = { version = "^1.0", features = ["backtrace"] }
async-trait = "0.1.66"
backtrace = "0.3.67"
base64 = "0.21.0"
bus = "2.3.0"
cfg-if = "1.0.0"
chrono = "0.4.23"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctor = "0.1.26"
dap = { git = "https://github.com/lionel-/dap-rs", branch = "feature/all" }
dashmap = "5.4.0"
ego-tree = "0.6.2"
harp = { path = "../harp" }
html5ever = "0.26.0"
http = "0.2.9"
home = "0.5.5"
hyper = { version = "0.14.24", features = ["full"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
libR-shim = { path = "../libR-shim" }
libc = "0.2"
log = "0.4.17"
nix = { version = "0.26.2", features = ["signal"] }
notify = "6.0.0"
once_cell = "1.17.1"
parking_lot = "0.12.1"
regex = "1.10.0"
reqwest = { version = "0.11.20", features = ["json"] }
ropey = "1.6.0"
rust-embed = "8.0.0"
scraper = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"]}
stdext = { path = "../stdext" }
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = "0.19.0"
tree-sitter = { git = "https://github.com/tree-sitter/tree-sitter" }
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", branch = "next" }
uuid = "1.3.0"
url = "2.4.1"
walkdir = "2"
yaml-rust = "0.4.5"
winsafe = { version = "0.0.18", features = ["kernel"] }

[build-dependencies]
chrono = "0.4.23"
embed-resource = "2.4.0"
