[package]
name = "ark"
version = "0.1.133"
description = """
Ark, an R Kernel.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4.4.0"
amalthea = { path = "../amalthea" }
anyhow = "1.0.80"
async-trait = "0.1.66"
base64 = "0.21.0"
bus = "2.3.0"
cfg-if = "1.0.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ctor = "0.1.26"
dap = { git = "https://github.com/sztomi/dap-rs", branch = "main" }
dashmap = "5.4.0"
ego-tree = "0.6.2"
harp = { path = "../harp" }
http = "0.2.9"
home = "0.5.5"
itertools = "0.10.5"
lazy_static = "1.4.0"
libc = "0.2"
libr = { path = "../libr" }
log = "0.4.17"
mime_guess = "2.0.4"
nix = { version = "0.26.2", features = ["signal"] }
notify = "6.0.0"
once_cell = "1.17.1"
regex = "1.10.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
reqwest-retry = "0.6.1"
reqwest-middleware = "0.3.3"
ropey = "1.6.0"
rust-embed = "8.0.0"
scraper = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"]}
stdext = { path = "../stdext" }
tokio = { version = "1.26.0", features = ["full"] }
tower-lsp = "0.19.0"
tree-sitter = "0.22.6"
tree-sitter-r = { git = "https://github.com/r-lib/tree-sitter-r", rev = "bc8919d3c38b816652e1e2d1a1be037cf74364cb" }
uuid = "1.3.0"
url = "2.4.1"
walkdir = "2"
yaml-rust = "0.4.5"
winsafe = { version = "0.0.19", features = ["kernel"] }
struct-field-names-as-array = "0.3.0"
strum = "0.26.2"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
rustc-hash = "1.2.0"
tracing-error = "0.2.0"

[build-dependencies]
chrono = "0.4.23"
embed-resource = "2.4.0"

[package.metadata.generate-rpm]
assets = [{ source = "target/release/ark", dest = "/usr/bin/ark", mode = "755" }]
license = "TODO"
