[package]
name = "ark"
version = "0.1.243"
description = """
Ark, an R Kernel.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
actix-web.workspace = true
aether_factory.workspace = true
aether_lsp_utils.workspace = true
aether_parser.workspace = true
aether_syntax.workspace = true
amalthea.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
biome_line_index.workspace = true
biome_rowan.workspace = true
blake3.workspace = true
bus.workspace = true
cfg-if.workspace = true
crossbeam.workspace = true
ctor.workspace = true
dap.workspace = true
dashmap.workspace = true
ego-tree.workspace = true
futures.workspace = true
harp.workspace = true
home.workspace = true
http.workspace = true
itertools.workspace = true
libc.workspace = true
libr.workspace = true
log.workspace = true
mime_guess.workspace = true
nix.workspace = true
notify.workspace = true
once_cell.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
rust-embed.workspace = true
rustc-hash.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
stdext.workspace = true
streaming-iterator.workspace = true
strum.workspace = true
strum_macros.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-error.workspace = true
tracing-subscriber.workspace = true
tree-sitter.workspace = true
tree-sitter-r.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
winsafe.workspace = true
yaml-rust.workspace = true

[dev-dependencies]
ark_test.workspace = true
assert_matches.workspace = true
insta.workspace = true
stdext = { workspace = true, features = ["testing"] }
tempfile.workspace = true

[build-dependencies]
cc.workspace = true
chrono.workspace = true
embed-resource.workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/ark", dest = "/usr/bin/ark", mode = "755" },
]
license = "TODO"

[target.'cfg(unix)'.dependencies]
xdg.workspace = true
