[package]
name = "ark_test"
version = "0.1.0"
description = """
Test utilities for Ark.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
amalthea = { path = "../amalthea" }
anyhow = "1.0.80"
ark = { path = "../ark" }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
dap = { git = "https://github.com/sztomi/dap-rs", branch = "main", features = ["client"] }
harp = { path = "../harp" }
log = "0.4.17"
regex = "1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.94"
stdext = { path = "../stdext" }
tempfile = "3"
tree-sitter = "0.24.7"
uuid = "1.3.0"
