[package]
name = "ark_test"
version = "0.1.0"
description = """
Test utilities for Ark.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
amalthea.workspace = true
anyhow.workspace = true
ark.workspace = true
crossbeam.workspace = true
dap = { workspace = true, features = ["client"] }
harp.workspace = true
log.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
stdext.workspace = true
tempfile.workspace = true
tower-lsp.workspace = true
tree-sitter.workspace = true
url.workspace = true
uuid.workspace = true
