[package]
name = "echo"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
amalthea.workspace = true
async-trait.workspace = true
crossbeam.workspace = true
env_logger.workspace = true
log.workspace = true
serde_json.workspace = true

[lints]
workspace = true
