[package]
name = "harp"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = """
Tools for integrating R and Rust.
"""

[dependencies]
anyhow = "1.0.71"
c2rust-bitfields = "0.17.0"
cfg-if = "1.0.0"
ctor = "0.1.26"
harp-macros = { path = "./harp-macros" }
itertools = "0.10.5"
lazy_static = "1.4.0"
libR-shim = { path = "../libR-shim" }
libc = "0.2.140"
log = "0.4.17"
once_cell = "1.17.1"
parking_lot = "0.12.1"
regex = "1.7.3"
semver = "1.0.19"
stdext = { path = "../stdext" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.94"

[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { version = "0.5.0", features = ["use-bindgen"] }
