[package]
name = "harp"
version = "0.1.0"
description = """
Tools for integrating R and Rust.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.80"
cfg-if = "1.0.0"
ctor = "0.1.26"
harp-macros = { path = "./harp-macros" }
itertools = "0.10.5"
libc = "0.2.140"
libloading = "0.8.1"
libr = { path = "../libr" }
log = "0.4.17"
once_cell = "1.17.1"
parking_lot = "0.12.3"
regex = "1.7.3"
semver = "1.0.19"
stdext = { path = "../stdext" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["preserve_order"]}
rust-embed = "8.2.0"
tracing-error = "0.2.0"

[build-dependencies]
embed-resource = "2.5.0"
