[package]
name = "harp"
version = "0.1.0"
description = """
Tools for integrating R and Rust.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
cfg-if.workspace = true
ctor.workspace = true
harp-macros.workspace = true
itertools.workspace = true
libc.workspace = true
libloading.workspace = true
libr.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
rust-embed.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
stdext.workspace = true
tracing-error.workspace = true

[lints]
workspace = true

[build-dependencies]
embed-resource.workspace = true
