[package]
name = "libR-shim"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
description = """
Shim over libR-sys bindings, fixing up global variables for Windows and exposing
additional IDE specific tools.
"""

[dependencies]
libR-sys = "0.5.0"

# The libR-sys package doesn't currently provide bindings for R on aarch64
# Linux platforms, so on those systems we need to add the use-bingen feature,
# which causes the package to build its own bindings from scratch.
#
# Note that this typically requires the `llvm` and `clang` packages to be
# installed on the build host.
[target.'cfg(all(target_os="linux", target_arch="aarch64"))'.dependencies]
libR-sys = { version = "0.5.0", features = ["use-bindgen"] }
