[package]
name = "libr"
version = "0.1.0"
description = """
Bindings to R's C API, resolved dynamically at runtime.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.152"
libloading = "0.8.1"
paste = "1.0.14"
bitfield-struct = "0.7"
