[package]
name = "libr"
version = "0.1.0"
description = """
Bindings to R's C API, resolved dynamically at runtime.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
cfg-if.workspace = true
libc.workspace = true
libloading.workspace = true
paste.workspace = true
