[package]
name = "oak_cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
etcetera.workspace = true
log.workspace = true
oak_fs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
