[package]
name = "oak_cache"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
etcetera.workspace = true
libc.workspace = true
log.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
