[package]
name = "oak_ide"
version = "0.1.0"
description = """
IDE features for R: goto-definition, completions, hover, etc.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aether_syntax.workspace = true
biome_rowan.workspace = true
log.workspace = true
oak_core.workspace = true
oak_db.workspace = true
oak_semantic.workspace = true
oak_sources.workspace = true
stdext.workspace = true
url.workspace = true

[dev-dependencies]
aether_parser.workspace = true
assert_matches.workspace = true
oak_semantic = { workspace = true, features = ["testing"] }
oak_package_metadata.workspace = true
oak_sources = { workspace = true, features = ["testing"] }
