[package]
name = "oak_ide"
version = "0.1.0"
description = """
IDE features for R: goto-definition, completions, hover, etc.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aether_syntax.workspace = true
anyhow.workspace = true
biome_rowan.workspace = true
oak_core.workspace = true
oak_db.workspace = true
oak_semantic.workspace = true
url.workspace = true

[dev-dependencies]
aether_parser.workspace = true
aether_path.workspace = true
oak_package_metadata.workspace = true
oak_scan.workspace = true
oak_semantic = { workspace = true, features = ["testing"] }
salsa.workspace = true
