[package]
name = "oak_index"
version = "0.1.0"
description = """
Per-file semantic index for R: scopes, symbols, bindings, and uses.
"""

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aether_syntax.workspace = true
biome_rowan.workspace = true
itertools.workspace = true
log.workspace = true
oak_core.workspace = true
oak_package.workspace = true
oak_index_vec.workspace = true
rustc-hash.workspace = true
smallvec.workspace = true
stdext.workspace = true
url.workspace = true

[dev-dependencies]
aether_parser.workspace = true
assert_matches.workspace = true
oak_package = { workspace = true, features = ["testing"] }
