[package]
name = "oak_layers"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aether_parser.workspace = true
assert_matches.workspace = true
biome_rowan.workspace = true
oak_index.workspace = true
oak_package.workspace = true
oak_package_metadata.workspace = true
oak_sources.workspace = true
stdext.workspace = true
url.workspace = true

[dev-dependencies]
oak_package = { workspace = true, features = ["testing"] }
oak_sources = { workspace = true, features = ["testing"] }

[lints]
workspace = true
