[package]
name = "oak_package_definitions"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aether_parser.workspace = true
anyhow.workspace = true
biome_text_size.workspace = true
log.workspace = true
oak_core.workspace = true
oak_index.workspace = true
oak_index_vec.workspace = true
oak_package.workspace = true
oak_sources.workspace = true
rustc-hash.workspace = true
stdext.workspace = true

[features]
testing = []

[lints]
workspace = true
